<resources>
    <string name="app_name">茶月管理系統</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date_example">105/12/31</string>
    <string name="add_product">新增</string>
    <string name="edit">修改</string>
    <string name="unit_price">單價</string>
    <string name="amount">數量</string>
    <string name="specification">規格</string>
    <string name="product_name">產品名稱</string>
    <string name="price_example">999</string>
    <string name="spec_example">1000ml/瓶</string>
    <string name="product_example">有機無糖豆漿(大)</string>
    <string name="enter">確定</string>
    <string name="cancel">取消</string>
    <string name="button_edit">修改</string>
</resources>
