<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">


    <TextView
        android:id="@+id/text_dialog_edit_good_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/product_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/text_dialog_edit_good_spec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_edit_good_product_name"
        android:layout_marginTop="@dimen/min_margin"
        android:paddingLeft="8dp"
        android:text="@string/specification"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size" />

    <com.example.kuanglin.ochatsukierp.CustomView.CustomNumberEdit
        android:id="@+id/number_dialog_edit_good_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_edit_good_spec" />

    <com.example.kuanglin.ochatsukierp.CustomView.CustomNumberEdit
        android:id="@+id/number_dialog_edit_good_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_dialog_edit_good_amount" />

    <Button
        android:id="@+id/button_dialog_edit_done"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/number_dialog_edit_good_price"
        android:layout_below="@+id/number_dialog_edit_good_price"
        android:layout_marginTop="16dp"
        android:minWidth="0dp"
        android:text="@string/button_edit"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/button_dialog_edit_cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_dialog_edit_good_price"
        android:layout_marginTop="16dp"
        android:minWidth="0dp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>